--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ title_separator: "-"
 name: &name "Beleicia"
 description: &description "B. Bullock - Ph.D. Student" # Update this with a general description of your site, this is the default if not overridden by a page
 url:
-  https://belbull.github.com # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
+  https://belbull.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
   # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
-baseurl: "/site" # the subpath of your site, e.g. "/blog"
+baseurl: "/" # the subpath of your site, e.g. "/blog"
 repository: "belbull/site-page"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
